source/common/objects/c52_ContactProviderProfile__c.object
<CustomObject>
    <description>Information from the contacts profile data of the authentication provider used to authenticate to the mobile, web or other app.</description>
    <fields>
        <fullName>AuthenticationProvider__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Authentication Provider</label>
        <referenceTo>c52_AuthenticationProvider__c</referenceTo>
        <relationshipLabel>Contact Provider Profiles</relationshipLabel>
        <relationshipName>Contact_Provider_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>the contact Id of the related contact that</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Provider Profiles</relationshipLabel>
        <relationshipName>Contact_Provider_Profiles</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Email address of the user&apos;s provider profile</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <description>First name of the user</description>
        <label>First Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <description>Last name of the user</description>
        <label>Last Name</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_ID__c</fullName>
        <description>The ID of the user for the auth provider used.</description>
        <label>Profile ID</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>The username of the user for this provider</description>
        <label>Username</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Contact Provider Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPP-{0000000}</displayFormat>
        <label>Contact Provider Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Provider Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>